# memctl

./: LICENSE  README.md  pyproject.toml
memctl/: __init__.py  cli.py  consolidation.py  db.py  decay.py  embeddings.py  license.py  mcp_server.py  sdk.py
tests/: test_db.py
