[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memoctl"
version = "0.1.0"
description = "Persistent memory for AI agents. One SQLite file. Zero infra."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
keywords = ["ai", "agents", "memory", "sqlite", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
embeddings = [
    "fastembed>=0.3.0",
]
mcp = [
    "mcp>=1.0.0",
]
all = [
    "fastembed>=0.3.0",
    "mcp>=1.0.0",
]
dev = [
    "pytest>=7.0",
]

[project.scripts]
memctl = "memctl.cli:main"

[project.urls]
Homepage = "https://github.com/atlas1m/memctl"
Repository = "https://github.com/atlas1m/memctl"
Issues = "https://github.com/atlas1m/memctl/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["memctl*"]
